--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_maps_flutter: ^0.0.3
   flutter_google_places: ^0.1.4
   location: ^1.4.1
+  flutter_spinkit: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
