--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,11 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Backdrop requires access to photos</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Backdrop requires access to the camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Backdrop requires access to the microphone</string>
 </dict>
 </plist>
