--- a/ios/Podfile
+++ b/ios/Podfile
@@ -64,7 +64,8 @@ target 'Runner' do
   # Plugin Pods
 
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
-  # referring to absolute paths on developers' machines.
+  # referring to absolute paths on developers' machines.'
+  use_frameworks! 
   system('rm -rf .symlinks')
   system('mkdir -p .symlinks/plugins')
   plugin_pods = parse_KV_file('../.flutter-plugins')
@@ -81,6 +82,7 @@ install! 'cocoapods', :disable_input_output_paths => true
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['SWIFT_VERSION'] = '5'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
   end
