--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,9 @@ dependencies:
 
   #Google Maps
   google_maps_flutter: ^0.5.0
-  flutter_google_places: ^0.1.4
-  location: ^1.4.1
+  flutter_google_places:
+    git: git://github.com/billsakkas/flutter_google_places.git
+  location: ^2.3.5
 
   #Spinkit
   flutter_spinkit: ^3.1.0
@@ -34,10 +35,20 @@ dependencies:
   #image_cropper
   image_cropper: ^1.0.2
 
-  #FireBase, prob don't need all of these
+  #FireBase
   firebase_core: ^0.4.0+9
-  firebase_storage: ^3.0.4
-  cloud_firestore: ^0.12.9+5
+  firebase_storage: ^3.1.1
+  cloud_firestore: ^0.13.0+1
+
+  #GeoFlutterFire:
+  geoflutterfire: ^2.0.3+8
+  rxdart: ^0.23.1
+
+  #GeoHashing
+  geohash: ^0.2.1
+  
+  #UUID generator
+  uuid: 2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
