--- a/ios/Podfile
+++ b/ios/Podfile
@@ -65,7 +65,8 @@ target 'Runner' do
 
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
   # referring to absolute paths on developers' machines.'
-  use_frameworks! 
+  use_frameworks!
+  #use_modular_headers!
   system('rm -rf .symlinks')
   system('mkdir -p .symlinks/plugins')
   plugin_pods = parse_KV_file('../.flutter-plugins')
