heavily customized map

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: backdrop
-description: A new Flutter project.
+description: A way for users to find locations to take photos when visiting new places
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
